# Poly-Midi-Trigger

./: .gitmodules  CMakeLists.txt  CMakeSetting-RPiPicos.json  CMakeSettings.json  README.md  picoflash.ps1
Display/: CMakeLists.txt  FreeRTOSConfig.h  cdc.c  cdc.h  defines.h  device_callbacks.c  disp_hagl.c  disp_hagl.h  led_task.c  main.c  main.h  midi.c  midi.h  rtos_hooks.c  rtos_hooks.h  tusb_config.h  usb_descriptors.c  vars.h
Display/midi/: Arp.c  Arp.cpp  Arp.h  CMakeLists.txt  LinkedList.c  LinkedList.cpp  LinkedList.hpp  NoteTimer.c  NoteTimer.h  gate.cpp  handlers.c  handlers.cpp  handlers.h  list.c  list.h  maingate.cpp  maingate.h  midi.c  midi.cpp  midi.h  struct.h  vars.h
Display/screen/: OptionsMenu.c  OptionsMenu.cpp  OptionsMenu.h  disp_hagl.c  disp_hagl.h  disp_ssd1306.cpp  disp_ssd1306.h  stringtable.c
Display/utils/: MovingAvg.cpp  MovingAvg.h  MovingAvg.hpp  MultiClick.c  MultiClick.h  led_task.h  tools.c  tools.h
midi/: CMakeLists.txt  CMakeLists.txt.cpy  midi.c  midi.h  tusb_config.h
